--- a/app/views/contract.html
+++ b/app/views/contract.html
@@ -4,9 +4,9 @@
     <div class="form-group">
       <label class="checkbox-inline"><input type="checkbox" ng-model="patient.accepts_contract" />Accept Terms<br />
 
-      <label>Full Name: <input class="form-control" type="text" ng-model="patient.signature" /></label><br />
+      <label>Full Name: <input type="text" ng-model="patient.signature" /></label><br />
 
-      <label>Date: <input class="form-control" type="date" ng-model="patient.date" /></label><br />
+      <label>Date: <input type="date" ng-model="patient.date" /></label><br />
 
       <a class="btn button" href="#!/history">Back</a>
       <a class="btn button" href="#!/summary">Next</a>
