--- a/app/views/demographics.html
+++ b/app/views/demographics.html
@@ -1,28 +1,33 @@
 <div>
   <form novalidate >
     <div class="form-group">
-      <label>First Name: <input class="form-control" type="text" ng-model="patient.first_name" /></label><br />
+      <label>First Name: <input type="text" ng-model="patient.first_name" /></label><br />
 
-      <label>Last Name: <input class="form-control" type="text" ng-model="patient.last_name" /></label><br />
+      <label>Last Name: <input type="text" ng-model="patient.last_name" /></label><br />
 
-      Sex: <label><input type="radio" ng-model="patient.sex" value="Male" />Male</label>
-      <label><input type="radio" ng-model="patient.sex" value="Female" />Female</label><br />
+      <b>Sex:&nbsp<b/>
+      <label>
+        <input type="radio" ng-model="patient.sex" value="Male" />Male
+      </label>
+      <label>
+        <input type="radio" ng-model="patient.sex" value="Female" />Female
+      </label><br />
 
-      <label>Birth Date: <input class="form-control" type="date" ng-model="patient.birthdate" /></label><br />
+      <label>Birth Date: <input type="date" ng-model="patient.birthdate" /></label><br />
 
       <label>E-mail: <input type="email" ng-model="patient.email" /></label><br />
 
-      <label>Phone Number: <input type="test" ng-model="patient.phone" /></label><br />
+      <label>Phone Number: <input type="text" ng-model="patient.phone" /></label><br />
 
-      <label>Street Address: <input type="test" ng-model="patient.address" /></label><br />
+      <label>Street Address: <input type="text" ng-model="patient.address" /></label><br />
 
-      <label>City: <input type="test" ng-model="patient.city" /></label><br />
+      <label>City: <input type="text" ng-model="patient.city" /></label><br />
 
-      <label>State: <input type="test" ng-model="patient.state" /></label><br />
+      <label>State: <input type="text" ng-model="patient.state" /></label><br />
 
       <label>Zipcode: <input type="number" size="5" ng-model="patient.zipcode" /></label><br />
 
-      Marital Status:
+      <b>Marital Status:&nbsp;</b>
       <label ng-repeat="status in marital_statuses">
         <input type="radio" ng-model="patient.status" value="{{status}}" />{{status}}<br />
       </label><br />
